2003-06-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-w3m-attributes): Improve the regexp to extract
	content-types.

2003-06-08  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-form.el (w3m-form-parse-and-fontify): Apply
	`w3m-decode-anchor-string' to the form action url.

2003-06-07  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun.el (toplevel): Slot definition order of `shimbun' class
	is changed to avoid mismatching.

	* shimbun.el: Changes to eliminate dependence between modules
	caused by compiled macros of internal accesors.
	(shimbun-server, shimbun-current-group, shimbun-mua-shimbun): New
	function.
	(shimbun-header-subject, shimbun-header-set-subject,
	shimbun-header-from, shimbun-header-set-from, shimbun-header-date,
	shimbun-header-set-date, shimbun-header-id, shimbun-header-set-id,
	shimbun-header-references, shimbun-header-set-references,
	shimbun-header-chars, shimbun-header-set-chars,
	shimbun-header-lines, shimbun-header-set-lines,
	shimbun-header-xref, shimbun-header-set-xref,
	shimbun-header-extra, shimbun-header-set-extra): Use `defun'
	instead of `defsubst'.
	(shimbun-header-field-value): Removed.

	* nnshimbun.el (shimbun-mua-search-id):
	Call `shimbun-current-group' instead of `shimbun-current-group-internal';
	Call `shimbun-mua-shimbun' instead of `shimbun-mua-shimbun-internal'.
	(nnshimbun-current-group):
	Call `shimbun-current-group' instead of `shimbun-current-group-internal'.

	* mew-shimbun.el (mew-shimbun-retrieve-article):
	Call `shimbun-server' instead of `shimbun-server-internal';
	Call `shimbun-current-group' instead of `shimbun-current-group-internal';
	Call `shimbun-mua-shimbun' instead of `shimbun-mua-shimbun-internal'.
	(mew-shimbun-re-retrieve-article): Ditto.

	* sb-mhonarc.el (shimbun-mhonarc-header-value): New function.
	(shimbun-make-contents): Call `shimbun-mhonarc-header-value'
	instead of `shimbun-header-field-value'.

2003-06-06  Koichiro Ohba  <koichiro@meadowy.org>

	* shimbun/sb-tdiary.el: New file.
